# toon-cli

./: Cargo.toml  README.md  TOON_SPEC.md
.github/workflows/: ci.yml  release.yml
benches/: compare.sh  encode.rs  mock_data.json
src/: encode.rs  main.rs
tests/: e2e.rs
