[package]
name = "toon-cli"
version = "0.1.0"
edition = "2021"
description = "Blazing-fast JSON-to-TOON converter CLI"

[dependencies]
simd-json = "0.14"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
ryu = "1"
itoa = "1"
memchr = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bench]]
name = "encode"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
